Remove calls to deprecated URL constructor (#4551)
Signed-off-by: Mark Herwege <mark.herwege@telenet.be>