@@ -17,6 +17,8 @@ import static org.openhab.core.addon.marketplace.internal.community.CommunityMar
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 
@@ -99,7 +101,12 @@ public class CommunityRuleTemplateAddonHandler implements MarketplaceAddonHandle
     }
 
     private String getTemplateFromURL(String urlString) throws IOException {
-        URL u = new URL(urlString);
+        URL u;
+        try {
+            u = (new URI(urlString)).toURL();
+        } catch (IllegalArgumentException | URISyntaxException e) {
+            throw new IOException(e);
+        }
         try (InputStream in = u.openStream()) {
             return new String(in.readAllBytes(), StandardCharsets.UTF_8);
         }
